# Bank-Assistant

./: .gitignore  AGENTS.md  PLAN.md  README.md  app.py  conftest.py  opencode.json  pyproject.toml
.github/workflows/: ci.yml
data/processed/: documents.json  pii_scan.json
data/vectorstore/: chroma.sqlite3
data/vectorstore/0aae726f-ea46-48f7-a9cc-954821211d5b/: index_metadata.pickle
data/vectorstore/624f16a4-af37-4322-b81d-c22b1ccdc4ed/: index_metadata.pickle
eval/: eval_ground_truth.py  eval_results.json  evaluate_retrieval.py
scripts/: build_vectordb.py  document_manager.py  guardrails.py  preprocess.py  rag_pipeline.py
tests/: test_build_vectordb.py  test_document_manager.py  test_guardrails.py  test_preprocess.py  test_rag_pipeline.py
