[project]
name = "bank-assistant"
version = "0.1.0"
description = "RAG-based Bank Assistant using NUST Bank product knowledge"
requires-python = ">=3.11,<3.13"
dependencies = [
    "openpyxl>=3.1.0",
    "chromadb>=1.0.0",
    "sentence-transformers>=3.0.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "langchain-chroma>=0.2.0",
    "streamlit>=1.35.0",
    "ollama>=0.3.0",
    "llm-guard>=0.3.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cpu"]
override-dependencies = [
    "torch>=2.0.0",
    "nvidia-cublas-cu12 ; python_version < '0'",
    "nvidia-cuda-cupti-cu12 ; python_version < '0'",
    "nvidia-cuda-nvrtc-cu12 ; python_version < '0'",
    "nvidia-cuda-runtime-cu12 ; python_version < '0'",
    "nvidia-cudnn-cu12 ; python_version < '0'",
    "nvidia-cufft-cu12 ; python_version < '0'",
    "nvidia-curand-cu12 ; python_version < '0'",
    "nvidia-cusolver-cu12 ; python_version < '0'",
    "nvidia-cusparse-cu12 ; python_version < '0'",
    "nvidia-cusparselt-cu12 ; python_version < '0'",
    "nvidia-nccl-cu12 ; python_version < '0'",
    "nvidia-nvjitlink-cu12 ; python_version < '0'",
    "nvidia-nvtx-cu12 ; python_version < '0'",
    "triton ; python_version < '0'",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["scripts"]
